<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="1006dp"
        android:layout_height="681dp"
        android:adjustViewBounds="true"
        android:contentDescription="@android:string/ok"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/layoutNavegacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fuenlabrada" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutNavegacion"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/imageButtonAjustes"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:contentDescription="@string/button_ajustes"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_ajustes_claro"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/imageButtonHome"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:contentDescription="@string/button_home"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_home1_claro"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/imageButtonEventos"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:contentDescription="@string/button_eventos"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_eventos_claro"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/imageButtonNoticias"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="#00000000"
            android:contentDescription="@string/button_noticias"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_noticias_claro"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/imageButtonAyuda"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button_ayuda"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/imageHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@mipmap/ic_tutorial"
        tools:srcCompat="@mipmap/ic_tutorial"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>